fix navbar side align center

--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,7 @@
 
 #sidebar {
   width: var(--sidebar-width);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
   color: white;
 
   background-image: url(../img/sidebar-bg.png);
@@ -51,6 +49,14 @@
 #main {
   width: calc(100% - var(--sidebar-width));
   overflow: auto;
+}
+
+#sidebar .container-fluid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  color: white;
 }
 
 /* |TOP CONTENT| */
@@ -93,7 +99,7 @@
   :root {
     --sidebar-width: 150px;
   }
-  #sidebar {
+  #sidebar .container-fluid {
     align-items: start;
   }
 
